vscode_sh_template/src/SHParser.ts
// Generated from .\src\SH.g4 by ANTLR 4.9.0-SNAPSHOT


import { SH } from "./SH_require"


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SHListener } from "./SHListener";

export class SHParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly VERSION = 16;
	public static readonly EXP = 17;
	public static readonly STR = 18;
	public static readonly SPACE = 19;
	public static readonly LINE_COMMENT = 20;
	public static readonly ID = 21;
	public static readonly RULE_start = 0;
	public static readonly RULE_start__y_ = 1;
	public static readonly RULE_op = 2;
	public static readonly RULE_version = 3;
	public static readonly RULE_specifier = 4;
	public static readonly RULE_specifier_set = 5;
	public static readonly RULE_comment = 6;
	public static readonly RULE_id = 7;
	public static readonly RULE_list_o_component_p_ = 8;
	public static readonly RULE_comp = 9;
	public static readonly RULE_list_o_comment_p_ = 10;
	public static readonly RULE_component = 11;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "start__y_", "op", "version", "specifier", "specifier_set", "comment", 
		"id", "list_o_component_p_", "comp", "list_o_comment_p_", "component",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'format'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'~'", 
		"'^'", "'&&'", "'true'", "'false'", "'null'", "'{'", "'}'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, "VERSION", "EXP", "STR", "SPACE", "LINE_COMMENT", 
		"ID",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SHParser._LITERAL_NAMES, SHParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SHParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SH.g4"; }

	// @Override
	public get ruleNames(): string[] { return SHParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SHParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SHParser._ATN, this);
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let _localctx: StartContext = new StartContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SHParser.RULE_start);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 24;
			_localctx._v = this.start__y_();
			this.state = 25;
			this.match(SHParser.EOF);
			 _localctx.result =  _localctx._v.result; 
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public start__y_(): Start__y_Context {
		let _localctx: Start__y_Context = new Start__y_Context(this._ctx, this.state);
		this.enterRule(_localctx, 2, SHParser.RULE_start__y_);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 28;
			_localctx._start__y__0__1 = this.match(SHParser.T__0);
			this.state = 29;
			this.version();
			this.state = 30;
			this.component();
			 
			                _localctx.result =  <number> SH(<Token> _localctx._start__y__0__1, <string> "namespace");
			            
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public op(): OpContext {
		let _localctx: OpContext = new OpContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SHParser.RULE_op);
		try {
			this.state = 49;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SHParser.T__1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 33;
				_localctx._op_0__1 = this.match(SHParser.T__1);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_0__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 35;
				_localctx._op_1__1 = this.match(SHParser.T__2);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_1__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 37;
				_localctx._op_2__1 = this.match(SHParser.T__3);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_2__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 39;
				_localctx._op_3__1 = this.match(SHParser.T__4);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_3__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 41;
				_localctx._op_4__1 = this.match(SHParser.T__5);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_4__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 43;
				_localctx._op_5__1 = this.match(SHParser.T__6);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_5__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 45;
				_localctx._op_6__1 = this.match(SHParser.T__7);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_6__1, <string> "operator");
				            
				}
				break;
			case SHParser.T__8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 47;
				_localctx._op_7__1 = this.match(SHParser.T__8);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._op_7__1, <string> "operator");
				            
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public version(): VersionContext {
		let _localctx: VersionContext = new VersionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SHParser.RULE_version);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 51;
			_localctx._version_0__1 = this.match(SHParser.VERSION);
			 
			                _localctx.result =  <number> SH(<Token> _localctx._version_0__1, <string> "regexp");
			            
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public specifier(): SpecifierContext {
		let _localctx: SpecifierContext = new SpecifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SHParser.RULE_specifier);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.op();
			this.state = 55;
			this.version();
			 
			                _localctx.result =  0;
			            
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public specifier_set(): Specifier_setContext;
	public specifier_set(_p: number): Specifier_setContext;
	// @RuleVersion(0)
	public specifier_set(_p?: number): Specifier_setContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: Specifier_setContext = new Specifier_setContext(this._ctx, _parentState);
		let _prevctx: Specifier_setContext = _localctx;
		let _startState: number = 10;
		this.enterRecursionRule(_localctx, 10, SHParser.RULE_specifier_set, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 59;
			this.specifier();
			 
			                _localctx.result =  0;
			            
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 69;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new Specifier_setContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, SHParser.RULE_specifier_set);
					this.state = 62;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 63;
					_localctx._specifier_set_1__2 = this.match(SHParser.T__9);
					this.state = 64;
					this.specifier();
					 
					                          _localctx.result =  <number> SH(<Token> _localctx._specifier_set_1__2, <string> "enum");
					                      
					}
					}
				}
				this.state = 71;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comment(): CommentContext {
		let _localctx: CommentContext = new CommentContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SHParser.RULE_comment);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 72;
			_localctx._comment_0__1 = this.match(SHParser.LINE_COMMENT);
			 
			                _localctx.result =  <number> SH(<Token> _localctx._comment_0__1, <string> "comment");
			            
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public id(): IdContext {
		let _localctx: IdContext = new IdContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SHParser.RULE_id);
		try {
			this.state = 79;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SHParser.T__0:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 75;
				_localctx._id_0__1 = this.match(SHParser.T__0);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._id_0__1, <string> "variable");
				            
				}
				break;
			case SHParser.ID:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 77;
				_localctx._id_1__1 = this.match(SHParser.ID);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._id_1__1, <string> "variable");
				            
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public list_o_component_p_(): List_o_component_p_Context;
	public list_o_component_p_(_p: number): List_o_component_p_Context;
	// @RuleVersion(0)
	public list_o_component_p_(_p?: number): List_o_component_p_Context {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: List_o_component_p_Context = new List_o_component_p_Context(this._ctx, _parentState);
		let _prevctx: List_o_component_p_Context = _localctx;
		let _startState: number = 16;
		this.enterRecursionRule(_localctx, 16, SHParser.RULE_list_o_component_p_, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 82;
			this.component();
			 
			                _localctx.result =  0;
			            
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 91;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new List_o_component_p_Context(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, SHParser.RULE_list_o_component_p_);
					this.state = 85;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 86;
					this.component();
					 
					                          _localctx.result =  0;
					                      
					}
					}
				}
				this.state = 93;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 3, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public comp(): CompContext {
		let _localctx: CompContext = new CompContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SHParser.RULE_comp);
		try {
			this.state = 122;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 94;
				_localctx._comp_0__1 = this.match(SHParser.EXP);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._comp_0__1, <string> "number");
				            
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 96;
				_localctx._comp_1__1 = this.match(SHParser.STR);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._comp_1__1, <string> "string");
				            
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 98;
				_localctx._comp_2__1 = this.match(SHParser.T__10);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._comp_2__1, <string> "struct");
				            
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 100;
				_localctx._comp_3__1 = this.match(SHParser.T__11);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._comp_3__1, <string> "struct");
				            
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 102;
				_localctx._comp_4__1 = this.match(SHParser.T__12);
				 
				                _localctx.result =  <number> SH(<Token> _localctx._comp_4__1, <string> "struct");
				            
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 104;
				this.version();
				 
				                _localctx.result =  0;
				            
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 107;
				this.specifier_set(0);
				 
				                _localctx.result =  0;
				            
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 110;
				this.id();
				this.state = 111;
				this.comp();
				 
				                _localctx.result =  0;
				            
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 114;
				_localctx._comp_8__1 = this.match(SHParser.T__13);
				this.state = 115;
				this.list_o_component_p_(0);
				this.state = 116;
				_localctx._comp_8__3 = this.match(SHParser.T__14);
				 
				                let _ : number = <number> SH(<Token> _localctx._comp_8__1, <string> "class");
				                _localctx.result =  <number> SH(<Token> _localctx._comp_8__3, <string> "class");
				            
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 119;
				_localctx._comp_9__1 = this.match(SHParser.T__13);
				this.state = 120;
				_localctx._comp_9__2 = this.match(SHParser.T__14);
				 
				                let ___98_ : number = <number> SH(<Token> _localctx._comp_9__1, <string> "class");
				                _localctx.result =  <number> SH(<Token> _localctx._comp_9__2, <string> "class");
				            
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public list_o_comment_p_(): List_o_comment_p_Context;
	public list_o_comment_p_(_p: number): List_o_comment_p_Context;
	// @RuleVersion(0)
	public list_o_comment_p_(_p?: number): List_o_comment_p_Context {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: List_o_comment_p_Context = new List_o_comment_p_Context(this._ctx, _parentState);
		let _prevctx: List_o_comment_p_Context = _localctx;
		let _startState: number = 20;
		this.enterRecursionRule(_localctx, 20, SHParser.RULE_list_o_comment_p_, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 125;
			this.comment();
			 
			                _localctx.result =  0;
			            
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 134;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					{
					_localctx = new List_o_comment_p_Context(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, SHParser.RULE_list_o_comment_p_);
					this.state = 128;
					if (!(this.precpred(this._ctx, 1))) {
						throw this.createFailedPredicateException("this.precpred(this._ctx, 1)");
					}
					this.state = 129;
					this.comment();
					 
					                          _localctx.result =  0;
					                      
					}
					}
				}
				this.state = 136;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public component(): ComponentContext {
		let _localctx: ComponentContext = new ComponentContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, SHParser.RULE_component);
		try {
			this.state = 144;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SHParser.T__0:
			case SHParser.T__1:
			case SHParser.T__2:
			case SHParser.T__3:
			case SHParser.T__4:
			case SHParser.T__5:
			case SHParser.T__6:
			case SHParser.T__7:
			case SHParser.T__8:
			case SHParser.T__10:
			case SHParser.T__11:
			case SHParser.T__12:
			case SHParser.T__13:
			case SHParser.VERSION:
			case SHParser.EXP:
			case SHParser.STR:
			case SHParser.ID:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 137;
				this.comp();
				 
				                _localctx.result =  0;
				            
				}
				break;
			case SHParser.LINE_COMMENT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 140;
				this.list_o_comment_p_(0);
				this.state = 141;
				this.comp();
				 
				                _localctx.result =  0;
				            
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public sempred(_localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 5:
			return this.specifier_set_sempred(_localctx as Specifier_setContext, predIndex);

		case 8:
			return this.list_o_component_p__sempred(_localctx as List_o_component_p_Context, predIndex);

		case 10:
			return this.list_o_comment_p__sempred(_localctx as List_o_comment_p_Context, predIndex);
		}
		return true;
	}
	private specifier_set_sempred(_localctx: Specifier_setContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}
	private list_o_component_p__sempred(_localctx: List_o_component_p_Context, predIndex: number): boolean {
		switch (predIndex) {
		case 1:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}
	private list_o_comment_p__sempred(_localctx: List_o_comment_p_Context, predIndex: number): boolean {
		switch (predIndex) {
		case 2:
			return this.precpred(this._ctx, 1);
		}
		return true;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SHParser.__ATN) {
			SHParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(SHParser._serializedATN));
		}

		return SHParser.__ATN;
	}

}

export class StartContext extends ParserRuleContext {
	public result: number;
	public _v!: Start__y_Context;
	public EOF(): TerminalNode { return this.getToken(SHParser.EOF, 0); }
	public start__y_(): Start__y_Context {
		return this.getRuleContext(0, Start__y_Context);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_start; }
	// @Override
	public enterRule(listener: SHListener): void {
		if (listener.enterStart) {
			listener.enterStart(this);
		}
	}
	// @Override
	public exitRule(listener: SHListener): void {
		if (listener.exitStart) {
			listener.exitStart(this);
		}
	}
}


export class Start__y_Context extends ParserRuleContext {
	public result: number;
	public _start__y__0__1!: Token;
	public version(): VersionContext {
		return this.getRuleContext(0, VersionContext);
	}
	public component(): ComponentContext {
		return this.getRuleContext(0, ComponentContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_start__y_; }
	// @Override
	public enterRule(listener: SHListener): void {
		if (listener.enterStart__y_) {
			listener.enterStart__y_(this);
		}
	}
	// @Override
	public exitRule(listener: SHListener): void {
		if (listener.exitStart__y_) {
			listener.exitStart__y_(this);
		}
	}
}


export class OpContext extends ParserRuleContext {
	public result: number;
	public _op_0__1!: Token;
	public _op_1__1!: Token;
	public _op_2__1!: Token;
	public _op_3__1!: Token;
	public _op_4__1!: Token;
	public _op_5__1!: Token;
	public _op_6__1!: Token;
	public _op_7__1!: Token;
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_op; }
	// @Override
	public enterRule(listener: SHListener): void {
		if (listener.enterOp) {
			listener.enterOp(this);
		}
	}
	// @Override
	public exitRule(listener: SHListener): void {
		if (listener.exitOp) {
			listener.exitOp(this);
		}
	}
}


export class VersionContext extends ParserRuleContext {
	public result: number;
	public _version_0__1!: Token;
	public VERSION(): TerminalNode { return this.getToken(SHParser.VERSION, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_version; }
	// @Override
	public enterRule(listener: SHListener): void {
		if (listener.enterVersion) {
			listener.enterVersion(this);
		}
	}
	// @Override
	public exitRule(listener: SHListener): void {
		if (listener.exitVersion) {
			listener.exitVersion(this);
		}
	}
}


export class SpecifierContext extends ParserRuleContext {
	public result: number;
	public op(): OpContext {
		return this.getRuleContext(0, OpContext);
	}
	public version(): VersionContext {
		return this.getRuleContext(0, VersionContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_specifier; }
	// @Override
	public enterRule(listener: SHListener): void {
		if (listener.enterSpecifier) {
			listener.enterSpecifier(this);
		}
	}
	// @Override
	public exitRule(listener: SHListener): void {
		if (listener.exitSpecifier) {
			listener.exitSpecifier(this);
		}
	}
}


export class Specifier_setContext extends ParserRuleContext {
	public result: number;
	public _specifier_set_1__2!: Token;
	public specifier(): SpecifierContext {
		return this.getRuleContext(0, SpecifierContext);
	}
	public specifier_set(): Specifier_setContext | undefined {
		return this.tryGetRuleContext(0, Specifier_setContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_specifier_set; }
	// @Override
	public enterRule(listener: SHListener): void {
		if (listener.enterSpecifier_set) {
			listener.enterSpecifier_set(this);
		}
	}
	// @Override
	public exitRule(listener: SHListener): void {
		if (listener.exitSpecifier_set) {
			listener.exitSpecifier_set(this);
		}
	}
}


export class CommentContext extends ParserRuleContext {
	public result: number;
	public _comment_0__1!: Token;
	public LINE_COMMENT(): TerminalNode { return this.getToken(SHParser.LINE_COMMENT, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SHParser.RULE_comment; }
	// @Override
